# BookRecs

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  ML_System_Design.md  Makefile  README.md  docker-compose.airflow.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
.github/workflows/: docker-publish.yml  tests.yml
configs/sql/: 001_init.sql
data/: creator.py  data.py  download_raw_goodreads.py  goodreads.py  splitter.py
data/rawres/: baseline.ipynb  data_splitting.ipynb
docker/: entrypoint.sh
docs/: ML_System_Design.md  Research_Results.md
docs/recomends/: maybe_pipeline.md  product_pipeline_v1.md
frontend/: eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  main.jsx  styles.css
pipeline/: Dockerfile  requirements.txt  train.py
pipeline/artifacts/: save.py
pipeline/models/: content_tfidf.py  hybrid.py  item2item.py
pipeline/src/: data_bundle.py  evaluator.py
pipeline/training/: runner.py
research/: .dockerignore  Dockerfile  README.md  docker-compose.yml  requirements.txt
research/notebooks/: metrics_comparison.ipynb
research/results/: metrics_comparison_table.csv
research/train/: baselines.py  content_model.py  evaluator.py  hybrid.py  precompute.py  preprocessor.py  run_content.py  run_experiments.py  run_hybrid.py
sketching/pipeline/: train.py
sketching/research/: README.md
source/: __init__.py
source/interfaces/: __init__.py  api_entrypoint.py  batch_backfill_entrypoint.py  batch_entrypoint.py  cli.py  cli_migrate.py  cli_prepare.py  cli_run.py  cli_train.py  (+7 more)
(+199 files in other folders)
