[project]
name = "bookrecs"
version = "0.1.0"
description = "Book recommendation service with batch training pipeline and inference API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.36",
    "catboost==1.2.8",
    "fastapi==0.116.1",
    "pandas==2.2.3",
    "psycopg[binary]==3.2.3",
    "pyarrow==16.1.0",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "ruff>=0.10,<0.11",
]

[tool.uv]
default-groups = ["dev"]
