[project]
name = "bookrecs"
version = "0.1.0"
description = "Book recommendation service with batch training pipeline and inference API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3==1.35.36",
    "catboost==1.2.8",
    "fastapi==0.116.1",
    "pandas==2.2.3",
    "psycopg[binary]==3.2.3",
    "pyarrow==16.1.0",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "ruff>=0.10,<0.11",
    "flake8>=7.0,<8.0",
    "isort>=5.13,<6.0",
    "pylint>=3.0,<4.0",
    "mypy>=1.11,<2.0",
    "black>=24.0,<25.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "source.tests.*"
disable_error_code = ["arg-type", "list-item"]

[tool.pylint.messages_control]
disable = ["C", "R", "W", "E1129"]

[tool.pylint.format]
max-line-length = 88
